[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/HUD/splash-background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/AfterWish.gd" type="Script" id=2]
[ext_resource path="res://Resources/HUD/5 star, 1 pull.ogv" type="VideoStream" id=3]
[ext_resource path="res://Resources/HUD/closing-button.png" type="Texture" id=4]

[node name="AfterWish" type="Node"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 172.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 176.0
margin_right = 1176.0
margin_bottom = 720.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 1000.0
margin_bottom = 610.0
rect_min_size = Vector2( 1000, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 10

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 614.0
margin_right = 1000.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 1180.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
margin_right = 100.0
margin_bottom = 720.0

[node name="close" type="Button" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VideoPlayer" type="VideoPlayer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 3 )
bus = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="HBoxContainer/MarginContainer2/VBoxContainer/close" to="." method="_on_close_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
